# navigation-system

./: CMakeLists.txt
.github/workflows/: windows-build.yml
src/algorithms/: KDTree.cpp  KDTree.h  MapGenerator.cpp  MapGenerator.h  PathFinder.cpp  PathFinder.h  TrafficSimulator.cpp  TrafficSimulator.h
src/app/: NavigationSystem.cpp  NavigationSystem.h  main.cpp
src/core/: Map.cpp  Map.h  Point.cpp  Point.h  Road.cpp  Road.h
src/ui/: MainWindow.cpp  MainWindow.h  MapRenderer.cpp  MapRenderer.h  MapWidget.cpp  MapWidget.h
